--- a/django_client/templates/register.html
+++ b/django_client/templates/register.html
@@ -1,23 +1,23 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 
-{% block title %}Picard MCP - Login{% endblock %}
+{% block title %}Picard MCP - Register{% endblock %}
 
 {% block content %}
 <div class="row">
     <div class="col-md-6 offset-md-3">
         <div class="card">
             <div class="card-header bg-primary text-white">
-                <h3 class="mb-0">Login</h3>
+                <h3 class="mb-0">Register</h3>
             </div>
             <div class="card-body">
                 <form method="post">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <button type="submit" class="btn btn-primary mt-3">Login</button>
+                    <button type="submit" class="btn btn-primary mt-3">Register</button>
                 </form>
                 <div class="mt-3">
-                    <p>Don't have an account? <a href="{% url 'register' %}">Register here</a></p>
+                    <p>Already have an account? <a href="{% url 'login' %}">Login here</a></p>
                 </div>
             </div>
         </div>
