--- a/django_client/templates/base.html
+++ b/django_client/templates/base.html
@@ -74,6 +74,9 @@
                         <span class="nav-link text-light">Welcome, {{ user.username }}</span>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                     </li>
                     {% else %}
